--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">MeteringDevice</string>
+    <string name="all_rpm_value">all rpm values</string>
+    <string name="not_connected">not connected</string>
+    <string name="connect">Connect</string>
+    <string name="not_scanning">not scanning</string>
+    <string name="start_scanning">Start scanning</string>
+    <string name="target_rpm">Target RPM</string>
+    <string name="zero_init">0</string>
+    <string name="single_misses">Single misses</string>
+    <string name="double_misses">Double misses</string>
+    <string name="total_misses">Total misses</string>
+    <string name="start">Start</string>
 </resources>
